<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">La Pizzetta</string>
    <string name="around_me">Autour de moi</string>
    <string name="nb_person">Nombre de personnes</string>
    <string name="action_settings">Settings</string>
    <string name="placeholder">Placeholder</string>
    <string name="your_order">Votre commande :</string>
    <string name="activity_detail">Détails du produit</string>
    <string name="order_dialog_title">Confirmation</string>
    <string name="order_dialog_text">Voulez-vous envoyer la commande ?</string>
    <string name="confirm_add_product_text">Voulez-vous commander </string>
    <string name="description">Description : </string>
    <string name="price">Prix : </string>
    <string name="comments">Commentaires : </string>
    <string name="title_activity_welcome">WelcomeActivity</string>

    <string-array name="tableNum_array">
        <item>Table No.1</item>
        <item>Table No.2</item>
        <item>Table No.3</item>
    </string-array>

    <string name="title_activity_people_around">PeopleAround</string>
    <string name="title_company">Accompagnement</string>

    <!-- final activiry -->
    <string name="final_water_text">Demander de l\'eau</string>
    <string name="final_service_text">Appeler un serveur</string>
    <string name="final_rating_text">Votre avis</string>
    <string name="final_menu_text">Commander d\'autres produits</string>
    <string name="final_welcome_text">Bon appétit ! Vous pouvez choisir un des services suivants :</string>
    <string name="final_service_toast">Un serveur arrive dans quelques instants</string>
    <string name="final_water_toast">Une carafe d\'eau arrive bientôt</string>
    
    <!-- rating activity -->
    <string name="rating_welcome_text">Votre avis nous importe ! Veuillez donner votre avis sur les produits que vous avez commandés</string>
    <string name="rating_submit">Envoyer</string>

</resources>