<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <TextView
        android:id="@+id/final_text_welcome"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal"
        android:padding="30dp"
        android:text="@string/final_welcome_text"
        android:textSize="28sp" />

    <LinearLayout
        android:id="@+id/final_menu_layout"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/final_text_welcome"
        android:layout_marginLeft="270dp"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/final_menu"
            android:layout_width="fill_parent"
            android:layout_height="200dp" />

        <TextView
            android:id="@+id/final_menu_text"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:text="@string/final_menu_text"
            android:textSize="24dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/final_water_layout"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/final_menu_layout"
        android:layout_marginLeft="270dp"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/final_water"
            android:layout_width="fill_parent"
            android:layout_height="200dp" />

        <TextView
            android:id="@+id/final_water_text"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:text="@string/final_water_text"
            android:textSize="24dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/final_service_layout"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_below="@+id/final_text_welcome"
        android:layout_marginLeft="150dp"
        android:layout_toRightOf="@+id/final_menu_layout"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/final_service"
            android:layout_width="fill_parent"
            android:layout_height="200dp"/>

        <TextView
            android:id="@+id/final_service_text"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:text="@string/final_service_text"
            android:textSize="24dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/final_rating_layout"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_below="@+id/final_service_layout"
        android:layout_marginLeft="150dp"
        android:layout_toRightOf="@+id/final_water_layout"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/final_rating"
            android:layout_width="fill_parent"
            android:layout_height="200dp" />

        <TextView
            android:id="@+id/final_rating_text"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:text="@string/final_rating_text"
            android:textSize="24dp" />
    </LinearLayout>

</RelativeLayout>