<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="horizontal"
    android:weightSum="10" >

    <LinearLayout
        android:layout_width="0px"
        android:layout_height="match_parent"
        android:layout_weight="7"
        android:orientation="vertical" >

        <fr.telecom.resto.SlidingTab.SlidingTabLayout
            android:id="@+id/sliding_tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <android.support.v4.view.ViewPager
            android:id="@+id/viewpager"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="1"
            android:background="@android:color/white" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:background="?android:attr/dividerVertical" />

        <LinearLayout
            android:id="@+id/layout_buttons"
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:weightSum="10" >

            <Button
                android:id="@+id/callWaiter"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/final_service_text" />

            <Button
                android:id="@+id/peopleAround"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/around_me" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="1dp"
        android:layout_height="fill_parent"
        android:background="?android:attr/dividerHorizontal" />

    <RelativeLayout
        android:id="@+id/order_list_area"
        android:layout_width="0px"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:background="@android:color/white" >

        <TextView
            android:id="@+id/order_headline"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:gravity="center_horizontal"
            android:padding="15dp"
            android:text="@string/your_order"
            android:textSize="22sp" >
        </TextView>

        <ListView
            android:id="@+id/order_listview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/order_headline"
            android:paddingBottom="100dp" />

        <TextView
            android:id="@+id/order_sum"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_above="@+id/order_order"
            android:gravity="center"
            android:text="@string/placeholder"
            android:textSize="20sp" >
        </TextView>

        <Button
            android:id="@+id/order_order"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:background="@color/green_transparent"
            android:gravity="center"
            android:singleLine="false"
            android:text="Commander"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="24sp" />
    </RelativeLayout>

</LinearLayout>